--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>JgarGaming YT</title>
   </head>
   <body>
 
+<h1>Hello, Code School!</h1>
+<ul>
+
+<li>CSS</li>
+
+<li>Jquery</li>
+
+<li>Node.js</li>
+
+<li>Python</li>
+
+</ul>
   </body>
 </html>
